--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
      <script defer src="JS/script.js"></script>
      <!-- Tailwind css -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <!-- Favicon -->
+     <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
     
