--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
 <body>
     <h1 class="text-4xl font-semibold text-center h-18 py-3 text-white bg-blue-950">Rock Paper Scissors</h1>
     <section class="flex justify-center gap-7 lg:gap-10 mt-14">
-        <div class="hover:bg-blue-950 p-2 rounded-full">
+        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/rock.png" alt="">
         </div>
-        <div class="hover:bg-blue-950 p-2 rounded-full">
+        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/paper.png" alt="">
         </div>
-        <div class="hover:bg-blue-950 p-2 rounded-full">
+        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/scissors.png" alt="">
         </div>
     </section>
     <!-- score section -->
      <section class="flex text-center justify-center mt-20 gap-18">
         <div>
-            <p class="text-5xl font-bold" id="user-score">0</p>
+            <p class="text-4xl lg:text-5xl font-bold" id="user-score">0</p>
             <p class="text-2xl font-semibold">You</p>
         </div>
         <div>
-            <p class="text-5xl font-bold" id="computer-score">0</p>
+            <p class="text-4xl lg:text-5xl font-bold" id="computer-score">0</p>
             <p class="text-2xl font-semibold">Computer</p>
         </div>
      </section>
      <!-- result section -->
       <div class="text-center mt-18">
-        <p class="text-2xl font-semibold bg-blue-950 inline p-3 rounded-2xl text-white">Pick your move</p>
+        <p class="text-xl lg:text-2xl font-semibold bg-blue-950 inline p-3 rounded-2xl text-white">Pick your move</p>
       </div>
 </body>
 </html>
