--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <body>
     <h1 class="text-4xl font-semibold text-center h-18 py-3 text-white bg-blue-950">Rock Paper Scissors</h1>
     <section class="flex justify-center gap-7 lg:gap-10 mt-14">
-        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
+        <div id="rock" class="choice hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/rock.png" alt="">
         </div>
-        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
+        <div id="paper" class="choice hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/paper.png" alt="">
         </div>
-        <div class="hover:bg-blue-950 p-2 rounded-full cursor-pointer">
+        <div id="scissors" class="choice hover:bg-blue-950 p-2 rounded-full cursor-pointer">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/scissors.png" alt="">
         </div>
     </section>
@@ -37,7 +37,7 @@
      </section>
      <!-- result section -->
       <div class="text-center mt-18">
-        <p class="text-xl lg:text-2xl font-semibold bg-blue-950 inline p-3 rounded-2xl text-white">Pick your move</p>
+        <p id="result" class="text-xl lg:text-2xl font-semibold bg-blue-950 inline p-3 rounded-xl text-white">Play your move</p>
       </div>
 </body>
 </html>
