Reset button functionality added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
      </section>
      <!-- result section -->
       <div class="text-center mt-18">
-        <p id="result" class="text-xl lg:text-2xl font-semibold bg-blue-950 inline p-3 rounded-xl text-white">Play your move</p>
-      </div>
+        <p id="result" class="text-xl lg:text-2xl font-semibold bg-blue-950 inline p-3 rounded-sm text-white">Play your move</p>
+    </div>
+    <div class="text-center mt-14">
+        <button id="reset-btn" class="bg-[#d90429] cursor-pointer text-white px-5 py-2 rounded-xl">Reset</button>
+    </div>
+
 </body>
 </html>
