Developer name added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
     <div class="text-center mt-14">
         <button id="reset-btn" class="bg-[#d90429] cursor-pointer text-white px-5 py-2 rounded-xl">Reset</button>
     </div>
-
+     <p class="mr-3 mt-8 text-end">Developed by <i class="font-bold">TAUSIF ISLAM SHEIK</i></p>
 </body>
 </html>
