Some style changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1 class="text-4xl font-semibold text-center h-18 py-3 text-white bg-blue-950">Rock Paper Scissors</h1>
-    <section class="flex justify-center gap-7 lg:gap-10 mt-14">
+    <section class="flex justify-center gap-5 lg:gap-10 mt-14">
         <div id="rock" class="choice hover:bg-blue-950 p-2 rounded-full cursor-pointer transition-all duration-300">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/rock.png" alt="">
         </div>
@@ -26,7 +26,7 @@
     </section>
     <!-- score section -->
      
-        <section class="flex justify-center items-center gap-16 my-10">
+        <section class="flex justify-center items-center gap-10 lg:gap-16 my-10">
         <!-- User Score -->
         <div class="bg-white shadow-xl rounded-lg p-6 w-32 text-center">
             <p class="text-sm font-semibold text-gray-500 mb-1">You</p>
