Text size edited

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
      <link rel="shortcut icon" href="images/favicon.jpg" type="image/x-icon">
 </head>
 <body>
-    <h1 class="text-4xl font-semibold text-center h-18 py-3 text-white bg-blue-950">Rock Paper Scissors</h1>
-    <section class="flex justify-center gap-5 lg:gap-10 mt-14">
+    <h1 class="text-2xl lg:text-4xl font-semibold text-center h-18 py-3 text-white bg-blue-950">Rock Paper Scissors</h1>
+    <section class="flex justify-center gap-4 lg:gap-10 mt-14">
         <div id="rock" class="choice hover:bg-blue-950 p-2 rounded-full cursor-pointer transition-all duration-300">
             <img class="h-24 w-24 lg:h-40 lg:w-40 object-cover rounded-full" src="images/rock.png" alt="">
         </div>
@@ -26,7 +26,7 @@
     </section>
     <!-- score section -->
      
-        <section class="flex justify-center items-center gap-10 lg:gap-16 my-10">
+        <section class="flex justify-center items-center gap-8 lg:gap-16 my-10">
         <!-- User Score -->
         <div class="bg-white shadow-xl rounded-lg p-6 w-32 text-center">
             <p class="text-sm font-semibold text-gray-500 mb-1">You</p>
@@ -52,6 +52,6 @@
     <div class="text-center mt-14">
         <button id="reset-btn" class="bg-[#d90429] cursor-pointer text-white px-5 py-2 rounded-xl">Reset</button>
     </div>
-     <p class="mr-3 mt-8 text-end">Developed by <i class="font-bold">TAUSIF ISLAM SHEIK</i></p>
+     <p class="mr-3 mt-8 mx-20 lg:text-end">Developed by <i class="font-bold">TAUSIF ISLAM SHEIK</i></p>
 </body>
 </html>
